--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DT7Solutions.github.io/krysta-frontend",
+  "homepage": " https://dt7solutions.github.io/krysta-frontend",
   "name": "lamadmin",
   "version": "0.1.0",
   "private": true,
